8241310: Fix warnings in jdk buildtools
Reviewed-by: erikj, forax